# Email-auto

mail-kanban-assistant/: .env.example  .gitignore  README.md  pyproject.toml
mail-kanban-assistant/app/: __init__.py  bootstrap.py  config.py  main.py
mail-kanban-assistant/app/application/: __init__.py  action_center_engine.py  action_center_explain.py  apple_mail_snapshot.py  digest_compose_options.py  digest_markdown.py  doctor_report.py  dtos.py  kanban_mapping.py  kanban_resync_policy.py  launchd_plist.py  llm_input.py  lm_studio_probe.py  outbound_kanban_planner.py  policies.py  ports.py  reply_context_builder.py  reply_draft_action_center_wiring.py  reply_draft_explain.py  reply_draft_export_files.py  reply_draft_fingerprint.py  reply_draft_pins.py  reply_draft_policy.py  reply_state_rules.py  reply_thread_resolution.py  thread_action_state_rules.py  thread_grouping.py  thread_subject.py  yougile_errors.py  yougile_kanban_policies.py
mail-kanban-assistant/app/domain/: __init__.py  enums.py  errors.py  (+3 more)
mail-kanban-assistant/tests/: fakes.py  test_action_center_engine.py  test_apple_mail_drop.py  test_cli_explain_action_center.py  test_cli_smoke.py  test_digest.py  test_digest_markdown_action_center.py  test_kanban_resync_policy.py  test_kanban_sync.py  test_lm_studio_probe.py  test_macos_launcher_scripts.py  test_models.py  test_reply_draft_workflow.py  test_reply_state_rules.py  test_sqlite_integration.py  test_task_extraction.py  test_thread_grouping.py  test_triage_flow.py  test_yougile_adapter.py  test_yougile_kanban_policies.py  test_yougile_onboarding.py
(+65 files in other folders)
