[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mail-kanban-assistant"
version = "0.1.0"
description = "Local-first mail triage and task extraction with LM Studio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "typer>=0.12,<1",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
mail-assistant = "app.interfaces.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = [
  "infrastructure/storage/schema.sql",
  "infrastructure/storage/migrations.py",
  "scheduler/launchd/com.local.mailassistant.plist.example",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
